Add vaccination countdown to page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
   <body>
     <div>
       <h1>Shelves The Dragon's GitHub page</h1>
+      <h2>VaccCtdwnDE</h2>
+      <p>A small project to calculate, when Germanys COVID19 vaccination goals are met. Currently as a shell script based on integers. Leisure time project by a coputer science student, <strong>specifically not</strong> exact data and not a prediction! Numbers are based on the performance of the last 7 days, published <a href="https://impfdashboard.de/daten">here</a> by <a href="https://www.rki.de">Robert Koch-Institut</a> and <a href="https://www.bundesgesundheitsministerium.de">Bundesministerium für Gesundheit (BMG)</a>. For more info on SARS-CoV-2 and COVID19 in Germany, see: <a href="https://www.rki.de/DE/Content/InfAZ/N/Neuartiges_Coronavirus/nCoV.html">https://www.rki.de/DE/Content/InfAZ/N/Neuartiges_Coronavirus/nCoV.html</a>.</p>
+      <p style="font-weight: 600; text-decoration: underline;">TODO:</p>
+      <ul>
+        <li>Use float based calculations.</li>
+        <li>Explanations and sources to README.md </li>
+        <li>Change comments and varaible names to represent these.</li>
+        <li>Add dependency and execution instructions.</li>
+        <li>Create release for main.</li>
+      </ul>
+      <a href="https://github.com/shelvesdragon/VaccCtdwnDE">repo on GitHub</a>
+      <h2>This page</h2>
+      <p style="font-weight: 600; text-decoration: underline;">TODO:</p>
+      <ul>
+        <li>...</li>
+      </ul>
     </div>
   </body>
 </html>
