Fixed Typo variable

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <ul>
         <li>Use float based calculations.</li>
         <li>Explanations and sources to README.md </li>
-        <li>Change comments and varaible names to represent these.</li>
+        <li>Change comments and variable names to represent these explanations.</li>
         <li>Add dependency and execution instructions.</li>
         <li>Create release for main.</li>
       </ul>
